@@ -67,6 +67,10 @@ disabled by default
 --enable-hardsid
 enables hardsid support, still untested
 
+--with-gcrypt / --without-gcrypt
+force/disable libgcrypt support for MD5 computation
+default check
+
 
 If doxygen is installed and detected by the configure script the documentation
 can be built by invoking "make doc".
