@@ -1,7 +1,7 @@
 /*
  * This file is part of libsidplayfp, a SID player engine.
  *
- * Copyright 2011-2016 Leandro Nini <drfiemost@users.sourceforge.net>
+ * Copyright 2011-2017 Leandro Nini <drfiemost@users.sourceforge.net>
  * Copyright 2007-2010 Antti Lankila
  * Copyright 2000-2001 Simon White
  *
@@ -70,14 +70,6 @@ public:
     } sampling_method_t;
 
 public:
-    /**
-     * Maximum power on delay.
-     * - Delays <= MAX produce constant results
-     * - Delays >  MAX produce random results
-     */
-    SID_DEPRECATED static const uint_least16_t MAX_POWER_ON_DELAY = 0x1FFF;
-    SID_DEPRECATED static const uint_least16_t DEFAULT_POWER_ON_DELAY = MAX_POWER_ON_DELAY + 1;
-
     static const uint_least32_t DEFAULT_SAMPLING_FREQ  = 44100;
 
 public:
@@ -142,11 +134,6 @@ public:
      * Right channel volume.
      */
     uint_least32_t rightVolume;
-
-    /**
-     * Power on delay cycles.
-     */
-    SID_DEPRECATED uint_least16_t powerOnDelay;
 
     /**
      * Sampling method.
