@@ -1,7 +1,7 @@
 /*
  * This file is part of libsidplayfp, a SID player engine.
  *
- *  Copyright 2011-2015 Leandro Nini
+ *  Copyright 2011-2017 Leandro Nini
  *  Copyright 2007-2010 Antti Lankila
  *  Copyright 2000 Simon White
  *
@@ -43,6 +43,3 @@ const char *SidInfo::speedString() const { return getSpeedString(); }
 const char *SidInfo::kernalDesc() const { return getKernalDesc(); }
 const char *SidInfo::basicDesc() const { return getBasicDesc(); }
 const char *SidInfo::chargenDesc() const { return getChargenDesc(); }
-
-// deprecated
-uint_least16_t SidInfo::powerOnDelay() const { return 0; }
