@@ -1,7 +1,7 @@
 /*
  * This file is part of libsidplayfp, a SID player engine.
  *
- *  Copyright 2011-2015 Leandro Nini
+ *  Copyright 2011-2017 Leandro Nini
  *  Copyright 2007-2010 Antti Lankila
  *  Copyright 2000 Simon White
  *
@@ -56,9 +56,6 @@ public:
 
     /// Size of the driver in bytes
     uint_least16_t driverLength() const;
-
-    /// \deprecated Power on delay
-    SID_DEPRECATED uint_least16_t powerOnDelay() const;
 
     /// Describes the speed current song is running at
     const char *speedString() const;
